--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/reset.css">
@@ -41,10 +42,17 @@
         </li>
       </ul>
       <img src="./img/Logo.svg" alt="Logo do AluraBooks" class="container__imagem">
+      <h1 class="container__titulo"> <b class="container__titulo-negrito"> Alura</b>Books</h1>
     </div>
+    <ul class="opcoes">
+      <li class="opcoes__item">CATEGORIAS</li>
+      <li class="opcoes__item">FAVORITOS</li>
+      <li class="opcoes__item">MINHA ESTANTE</li>
+    </ul>
     <div class="container">
-      <a href="#"> <img src="./img/Favoritos.svg" alt="Meus Favoritos" class="container__imagem"></a>
-      <a href="#"> <img src="./img/Compras.svg" alt="Carrinho de Compras" class="container__imagem"></a>
+      <a href="#" class="container__imagem container__imagem-favoritos> <img src=" ./img/Favoritos.svg"
+        alt="Meus Favoritos" "></a>
+      <a href=" #"> <img src="./img/Compras.svg" alt="Carrinho de Compras" class="container__imagem"></a>
       <a href="#"> <img src="./img/Usuário.svg" alt="Meu Perfil" class="container__imagem"></a>
     </div>
   </header>
