:zap: feat: @media screen (min-width: 1024px) - finalizado

--- a/index.html
+++ b/index.html
@@ -45,7 +45,27 @@
       <h1 class="container__titulo"> <b class="container__titulo-negrito"> Alura</b>Books</h1>
     </div>
     <ul class="opcoes">
-      <li class="opcoes__item">CATEGORIAS</li>
+      <input type="checkbox" id="Categorias" class="opcoes__categorias">
+      <label for="Categorias">
+        <li class="opcoes__item">CATEGORIAS</li>
+      </label>
+      <ul class="lista-menu">
+        <li class=" lista-menu__item">
+          <a href="#" class="lista-menu__link">Programação</a>
+        </li>
+        <li class=" lista-menu__item">
+          <a href="#" class="lista-menu__link">Front-End</a>
+        </li>
+        <li class="lista-menu__item">
+          <a href="#" class="lista-menu__link">Infraestrutura</a>
+        </li>
+        <li class="lista-menu__item">
+          <a href="#" class="lista-menu__link">Business</a>
+        </li>
+        <li class="lista-menu__item">
+          <a href="#" class="lista-menu__link">Design & UX</a>
+        </li>
+      </ul>
       <li class="opcoes__item">FAVORITOS</li>
       <li class="opcoes__item">MINHA ESTANTE</li>
     </ul>
@@ -205,6 +225,67 @@
   <hr />
   <footer class="rodape">
     <h2 class="rodape__titulo">Grupo Alura</h2>
+
+    <ul class="ropape__lista">
+      <li class="rodape__lista-titulo">Educação</li>
+      <li class="rodape__lista-item"><img src="./img/Caelum.png" alt="Logo Caelum">
+        <a href="#" class="rodape__lista-link">Caelum</a>
+      </li>
+      <li class="rodape__lista-item"><img src="./img/CasaDoCodigo.png" alt="Logo casa do código">
+        <a href="#" class="rodape__lista-link">Casa Do Código</a>
+      </li>
+    </ul>
+
+    <ul class="ropape__lista">
+      <li class="rodape__lista-titulo">Educação online</li>
+      <li class="rodape__lista-item"><img src="./img/Alura.png" alt="Logo Alura">
+        <a href="#" class="rodape__lista-link">Alura</a>
+      </li>
+      <li class="rodape__lista-item"><img src="./img/AluraEmpresas.png" alt="Logo Alura Para Empresas">
+        <a href="#" class="rodape__lista-link">Alura Para Empresas</a>
+      </li>
+      <li class="rodape__lista-item"><img src="./img/AluraLatam.png" alt="Logo Alura LATAM">
+        <a href="#" class="rodape__lista-link">Alura LATAM</a>
+      </li>
+      <li class="rodape__lista-item"><img src="./img/AluraStart.png" alt="Logo Alura Start">
+        <a href="#" class="rodape__lista-link">Alura Start</a>
+      </li>
+      <li class="rodape__lista-item"><img src="./img/MusicDot.png" alt="Logo MusicDot">
+        <a href="#" class="rodape__lista-link">MusicDot</a>
+      </li>
+      <li class="rodape__lista-item"><img src="./img/AluraLingua.png" alt="Logo Alura Língua">
+        <a href="#" class="rodape__lista-link">Alura Língua</a>
+      </li>
+      <li class="rodape__lista-item"><img src="./img/PM3.png" alt="Logo PM3">
+        <a href="#" class="rodape__lista-link">PM3</a>
+      </li>
+    </ul>
+
+    <ul class="ropape__lista">
+      <li class="rodape__lista-titulo">Comunidade</li>
+      <li class="rodape__lista-item"><img src="./img/HipstersTech.png" alt="Logo Hipsters ponto Tech">
+        <a href="#" class="rodape__lista-link">Hipsters ponto Tech</a>
+      </li>
+      <li class="rodape__lista-item"><img src="./img/Scuba.png" alt="Logo Scuba Dev">
+        <a href="#" class="rodape__lista-link">Scuba Dev</a>
+      </li>
+      <li class="rodape__lista-item"><img src="./img/Layers.png" alt="Logo Layers ponto Tech">
+        <a href="#" class="rodape__lista-link">Layers ponto Tech</a>
+      </li>
+      <li class="rodape__lista-item"><img src="./img/LikeABoss.png" alt="Logo Like a Boss">
+        <a href="#" class="rodape__lista-link">Like a Boss</a>
+      </li>
+      <li class="rodape__lista-item"><img src="./img/CarreiraSemFronteira.png" alt="Logo Carreira sem Fronteira">
+        <a href="#" class="rodape__lista-link">Carreira sem Fronteira</a>
+      </li>
+      <li class="rodape__lista-item"><img src="./img/HipstersJobs.png" alt="Logo Hipsters ponto Jobs">
+        <a href="#" class="rodape__lista-link">Hipsters ponto Jobs</a>
+      </li>
+      <li class="rodape__lista-item"><img src="./img//GUJ.png" alt="Logo GUJ">
+        <a href="#" class="rodape__lista-link">GUJ</a>
+      </li>
+    </ul>
+
   </footer>
 
   <script src=" https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js">
